--- a/xrfp/__ui__/main.ui
+++ b/xrfp/__ui__/main.ui
@@ -6,203 +6,178 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>452</width>
-    <height>702</height>
+    <width>798</width>
+    <height>556</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+   <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-  <property name="windowTitle">
-   <string>XRF Parser</string>
+  <property name="minimumSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
   </property>
-  <property name="unifiedTitleAndToolBarOnMac">
-   <bool>true</bool>
+  <property name="sizeIncrement">
+   <size>
+    <width>10</width>
+    <height>10</height>
+   </size>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGroupBox" name="boxFiles">
+   <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>431</width>
-      <height>571</height>
+      <width>771</width>
+      <height>481</height>
      </rect>
     </property>
-    <property name="title">
-     <string>Files</string>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>10</horstretch>
+      <verstretch>10</verstretch>
+     </sizepolicy>
     </property>
-    <widget class="QGroupBox" name="boxInputDir">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>411</width>
-       <height>261</height>
-      </rect>
-     </property>
-     <property name="title">
-      <string>Input Directory</string>
-     </property>
-     <widget class="QTreeView" name="treeFileDir">
+    <property name="minimumSize">
+     <size>
+      <width>771</width>
+      <height>481</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>771</width>
+      <height>481</height>
+     </size>
+    </property>
+    <property name="sizeIncrement">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
+    <widget class="QWidget" name="tabInput">
+     <attribute name="title">
+      <string>Input</string>
+     </attribute>
+     <widget class="QWidget" name="gridLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>20</y>
-        <width>261</width>
-        <height>231</height>
+        <x>-1</x>
+        <y>-1</y>
+        <width>761</width>
+        <height>451</height>
        </rect>
       </property>
-     </widget>
-     <widget class="QComboBox" name="applicationSelect">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>40</y>
-        <width>121</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <item>
-       <property name="text">
-        <string notr="true">Glass Majors</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string notr="true">GeoExploration</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string notr="true">GeoMining</string>
-       </property>
-      </item>
-     </widget>
-     <widget class="QLabel" name="applicationLabel">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>20</y>
-        <width>71</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>&amp;Application:</string>
-      </property>
-      <property name="buddy">
-       <cstring>applicationSelect</cstring>
-      </property>
-     </widget>
-     <widget class="QLabel" name="methodLabel">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>80</y>
-        <width>55</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
-      </property>
-      <property name="text">
-       <string>Method:</string>
-      </property>
-      <property name="buddy">
-       <cstring>comboBox</cstring>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="comboBox">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>100</y>
-        <width>121</width>
-        <height>22</height>
-       </rect>
-      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="lblInputDir">
+         <property name="text">
+          <string>Input Directory</string>
+         </property>
+         <property name="buddy">
+          <cstring>treeInputDir</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QComboBox" name="comboBox_2"/>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLabel" name="lblMethod">
+         <property name="text">
+          <string>Method</string>
+         </property>
+         <property name="buddy">
+          <cstring>comboBox_2</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QComboBox" name="comboBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <item>
+          <property name="text">
+           <string>GLASSMAJORS</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>GeoExploration</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>GeoMining</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="lblApplication">
+         <property name="text">
+          <string>Application</string>
+         </property>
+         <property name="buddy">
+          <cstring>comboBox</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="0" rowspan="4">
+        <widget class="QTreeView" name="treeInputDir"/>
+       </item>
+      </layout>
      </widget>
     </widget>
-    <widget class="QGroupBox" name="boxFilesUsing">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>290</y>
-       <width>411</width>
-       <height>281</height>
-      </rect>
-     </property>
-     <property name="title">
-      <string>Using</string>
-     </property>
-     <widget class="QListView" name="listFiles">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>61</y>
-        <width>391</width>
-        <height>211</height>
-       </rect>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="editTriggers">
-       <set>QAbstractItemView::SelectedClicked</set>
-      </property>
-      <property name="selectionMode">
-       <enum>QAbstractItemView::MultiSelection</enum>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="buttonAll">
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>30</y>
-        <width>93</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Select All</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="buttonNone">
-      <property name="geometry">
-       <rect>
-        <x>310</x>
-        <y>30</y>
-        <width>93</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Select None</string>
-      </property>
-      <property name="checkable">
-       <bool>false</bool>
-      </property>
-     </widget>
+    <widget class="QWidget" name="tabStats">
+     <attribute name="title">
+      <string>Statistics</string>
+     </attribute>
     </widget>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
+  <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>452</width>
+     <width>798</width>
      <height>26</height>
     </rect>
    </property>
@@ -214,45 +189,19 @@
    </widget>
    <addaction name="menuHelp"/>
   </widget>
+  <widget class="QStatusBar" name="statusbar"/>
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>treeInputDir</tabstop>
+  <tabstop>comboBox</tabstop>
+  <tabstop>comboBox_2</tabstop>
+ </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonAll</sender>
-   <signal>clicked()</signal>
-   <receiver>listFiles</receiver>
-   <slot>selectAll()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>276</x>
-     <y>369</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>225</x>
-     <y>492</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonNone</sender>
-   <signal>clicked()</signal>
-   <receiver>listFiles</receiver>
-   <slot>clearSelection()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>376</x>
-     <y>369</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>225</x>
-     <y>492</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
