--- a/xrfp/__ui__/main.ui
+++ b/xrfp/__ui__/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>798</width>
-    <height>556</height>
+    <width>640</width>
+    <height>570</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -43,33 +43,9 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>771</width>
-      <height>481</height>
+      <width>611</width>
+      <height>469</height>
      </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-      <horstretch>10</horstretch>
-      <verstretch>10</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>771</width>
-      <height>481</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>771</width>
-      <height>481</height>
-     </size>
-    </property>
-    <property name="sizeIncrement">
-     <size>
-      <width>0</width>
-      <height>0</height>
-     </size>
     </property>
     <property name="currentIndex">
      <number>0</number>
@@ -78,153 +54,176 @@
      <attribute name="title">
       <string>Input</string>
      </attribute>
-     <widget class="QWidget" name="gridLayoutWidget">
-      <property name="geometry">
-       <rect>
-        <x>-1</x>
-        <y>-1</y>
-        <width>761</width>
-        <height>451</height>
-       </rect>
-      </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="3" column="1">
-        <widget class="QLabel" name="lblMethod">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="text">
-          <string>Method</string>
-         </property>
-         <property name="buddy">
-          <cstring>selectMethod</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QComboBox" name="selectApplication">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <item>
-          <property name="text">
-           <string>GLASSMAJORS</string>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="1" column="0" rowspan="8" colspan="3">
+         <widget class="QTreeView" name="treeInputDir">
+          <property name="editTriggers">
+           <set>QAbstractItemView::DoubleClicked|QAbstractItemView::SelectedClicked</set>
           </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>GeoExploration</string>
+          <property name="sortingEnabled">
+           <bool>false</bool>
           </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>GeoMining</string>
+          <property name="animated">
+           <bool>true</bool>
           </property>
-         </item>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="lblInputDir">
-         <property name="text">
-          <string>Input Directory</string>
-         </property>
-         <property name="buddy">
-          <cstring>treeInputDir</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QComboBox" name="selectMethod">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="1">
-        <widget class="QLabel" name="lblFiles">
-         <property name="text">
-          <string>Input Files</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="lblApplication">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="text">
-          <string>Application</string>
-         </property>
-         <property name="buddy">
-          <cstring>selectApplication</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="1">
-        <widget class="QListView" name="listFiles">
-         <property name="editTriggers">
-          <set>QAbstractItemView::CurrentChanged</set>
-         </property>
-         <property name="selectionMode">
-          <enum>QAbstractItemView::MultiSelection</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="2" column="0" rowspan="10">
-        <widget class="QTreeView" name="treeInputDir">
-         <property name="editTriggers">
-          <set>QAbstractItemView::DoubleClicked|QAbstractItemView::SelectedClicked</set>
-         </property>
-         <property name="sortingEnabled">
-          <bool>false</bool>
-         </property>
-         <property name="animated">
-          <bool>true</bool>
-         </property>
-         <property name="headerHidden">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="1">
-        <layout class="QGridLayout" name="gridFiles">
-         <item row="1" column="1">
-          <widget class="QPushButton" name="btnAll">
+          <property name="headerHidden">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="3">
+         <widget class="QLabel" name="lblMethod">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Method</string>
+          </property>
+          <property name="buddy">
+           <cstring>selectMethod</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="3">
+         <layout class="QGridLayout" name="gridFiles">
+          <item row="0" column="0">
+           <widget class="QPushButton" name="btnNone">
+            <property name="text">
+             <string>Select None</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QPushButton" name="btnAll">
+            <property name="text">
+             <string>Select All</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="lblInputDir">
+          <property name="text">
+           <string>Input Directory</string>
+          </property>
+          <property name="buddy">
+           <cstring>treeInputDir</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
+         <widget class="QComboBox" name="selectMethod">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="3">
+         <widget class="QLabel" name="lblFiles">
+          <property name="text">
+           <string>Input Files</string>
+          </property>
+          <property name="buddy">
+           <cstring>listFiles</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QComboBox" name="selectApplication">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <item>
            <property name="text">
-            <string>Select All</string>
+            <string>GLASSMAJORS</string>
            </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QPushButton" name="btnNone">
+          </item>
+          <item>
            <property name="text">
-            <string>Select None</string>
+            <string>GeoExploration</string>
            </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </widget>
+          </item>
+          <item>
+           <property name="text">
+            <string>GeoMining</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QLabel" name="lblApplication">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Application</string>
+          </property>
+          <property name="buddy">
+           <cstring>selectApplication</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="3">
+         <spacer name="verticalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="btnRefresh">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="3">
+         <widget class="QListView" name="listFiles">
+          <property name="editTriggers">
+           <set>QAbstractItemView::CurrentChanged</set>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::MultiSelection</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="btnHome">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
     <widget class="QWidget" name="tabStats">
      <attribute name="title">
@@ -238,13 +237,13 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>798</width>
+     <width>640</width>
      <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>Help</string>
+     <string>&amp;Help</string>
     </property>
     <addaction name="actionAbout"/>
    </widget>
@@ -253,7 +252,12 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionAbout">
    <property name="text">
-    <string>About</string>
+    <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="actionfjfjfjf">
+   <property name="text">
+    <string>fjfjfjf</string>
    </property>
   </action>
  </widget>
@@ -272,8 +276,8 @@
    <slot>selectAll()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>678</x>
-     <y>295</y>
+     <x>603</x>
+     <y>487</y>
     </hint>
     <hint type="destinationlabel">
      <x>582</x>
@@ -288,8 +292,8 @@
    <slot>clearSelection()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>487</x>
-     <y>295</y>
+     <x>442</x>
+     <y>487</y>
     </hint>
     <hint type="destinationlabel">
      <x>582</x>
@@ -310,6 +314,22 @@
     <hint type="destinationlabel">
      <x>449</x>
      <y>392</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnRefresh</sender>
+   <signal>clicked()</signal>
+   <receiver>treeInputDir</receiver>
+   <slot>update()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>279</x>
+     <y>100</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>279</x>
+     <y>252</y>
     </hint>
    </hints>
   </connection>
