--- a/xrfp/__ui__/main.ui
+++ b/xrfp/__ui__/main.ui
@@ -196,6 +196,10 @@
           <property name="text">
            <string/>
           </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>images/tango/icons/tango/16x16/actions/view-refresh.png</normaloff>images/tango/icons/tango/16x16/actions/view-refresh.png</iconset>
+          </property>
          </widget>
         </item>
         <item row="6" column="3">
@@ -218,6 +222,10 @@
           </property>
           <property name="text">
            <string/>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>images/tango/icons/tango/16x16/actions/go-home.png</normaloff>images/tango/icons/tango/16x16/actions/go-home.png</iconset>
           </property>
          </widget>
         </item>
